# Al-Ajwad.cpp

./: .gitignore  .gitmodules  README.md  pyproject.toml  update_config.patch
.devcontainer/: devcontainer.json
