[tool.poetry]
name = "al-ajwad-cpp"
version = "0.1.0"
description = "Run Al Ajwad models using whisper.cpp"
authors = ["Abdulrhmn Ghanem <abdoghanem160@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "al_ajwad" }]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.1"
numpy = "^1.17.0"
transformers = "^4.42.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
